XbRelease notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current git (previous svn)
======================================
 o fcd39b077 2021-11-18 michele
   fixed getQueueEntries to return right value even when deleting entries in ReplSlave.

 o 4b72707c1 2021-11-09 michele
   added property clientSSLProtocol to SocketUrl to enforce a particular SSL protocol: it is used the same way as other 
   socket plugin properties and defaults to SSLv3 for backwards compatibility.

 o ee3e0840b 2021-06-07 marcel
   merged async-client-connection-todead to master

 o 0d6e45b34
   Bugfix: LOCAL protocol needs callback implementation
   
 o 8b3ba9770 michele
   added a property mom.initialDispatcherActive which is false per default for the ReplAgent

 o ea4fbb3c30be6dca005dec9555e6204a722e91e9 (feature/ml-replagent-log) michele
   added logs / warnings on connection changes

 o 18376 marcel
   Changed I_AccessFilter#getMimeTypes() plugins to never return null
 
 o 18374,18375 2020-06-04 michele, adrian, marcel
   Fixed for socket protocol: A client reconnect is guaranteed to receive ConnectReturnQos before pending callback messages are sent
   
 o 18371 2020-05-26  adrian
   Java client: Implemented ClientEntryFactory.createEntry for MsgQueueGetEntry to avoid exception on client queued get()
 
 o 18368-18370 2020-05-23 marcel
   Fixed subscribeQos.getWantInitialUpdate() to send update for re-susbcribes with subscribeQos.getMultiSubscribe() == false
   
 o 18362 2020-04-22 michele
   implemented a new checkpoint 'update.send' which acts once the entries are extracted from the callback queue and are
   ready to be sent to the client. It currently only acts on non-oneway updates.

 o 18361 2020-03-11 marcel
   xmlBlasterAccess.request() avoid memory leak of response topic which is now destroyed directly after response
   
 o 18359 2020-03-07 marcel