@@ -3,6 +3,9 @@ The "r99999" numbers are Subversion revision numbers.
 
 Changes for current git (previous svn)
 ======================================
+ o 2021-11-24 marcel
+   added replyTo markup support for emails
+
  o fcd39b077 2021-11-18 michele
    fixed getQueueEntries to return right value even when deleting entries in ReplSlave.
 
